# optillm-rs

./: .gitignore  .pre-commit-config.yaml  .prek.yaml  Cargo.toml  INTEGRATION_GUIDE.md  MODAL_BENCHMARK_SETUP.md  README.md  TINYLLAMA_STRATEGY_TEST_RESULTS.md  ULTRA_TINY_MODELS.md  mkdocs.yml  modal_benchmark.py
.claude/: AGENTS.md
.github/workflows/: build-and-release.yml  deploy-docs.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: config.rs  error.rs  main.rs
crates/cli/src/commands/: autothink.rs  cot_decoding.rs  deep_thinking.rs  entropy_decoding.rs  list_strategies.rs  mars.rs  mod.rs  r_star.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: client.rs  error.rs  lib.rs  optimizer.rs  solution.rs
crates/mars/: Cargo.toml  README.md
crates/mars/examples/: comprehensive_benchmark.rs  test_coding_models.rs  test_deepseek_coder.rs  test_ultra_tiny.rs  tinyllama_strategies.rs
crates/mars/src/: agent.rs  aggregator.rs  best_of_n.rs  config.rs  coordinator.rs  core_compat.rs  cot_reflection.rs  error.rs  lib.rs  mcts.rs  moa.rs  rsa.rs  self_consistency.rs  types.rs  workspace.rs
crates/mars/src/core/: agent.rs  aggregator.rs  coordinator.rs  mod.rs  prompts.rs
crates/mars/src/providers/: config.rs  mod.rs  ollama.rs  router.rs
crates/mars/src/providers/ollama/: README.md
crates/mars/src/strategies/: mod.rs
crates/mars/src/strategies/autothink/: mod.rs
crates/mars/src/strategies/best_of_n/: README.md  mod.rs  tests.rs
crates/mars/src/strategies/cot_decoding/: mod.rs
crates/mars/src/strategies/cot_reflection/: README.md  mod.rs  tests.rs
crates/mars/src/strategies/deep_thinking/: mod.rs
crates/mars/src/strategies/diverse_sampling/: README.md  mod.rs  tests.rs
crates/mars/src/strategies/entropy_decoding/: mod.rs
crates/mars/src/strategies/leap/: README.md  mod.rs  tests.rs
crates/mars/src/strategies/mcts/: README.md  mod.rs  tests.rs
crates/mars/src/strategies/moa/: README.md  mod.rs  tests.rs
crates/mars/src/strategies/plansearch/: README.md  mod.rs  tests.rs
crates/mars/src/strategies/pvg/: README.md  mod.rs  tests.rs
crates/mars/src/strategies/r_star/: mod.rs
crates/mars/src/strategies/reread/: README.md  mod.rs  tests.rs
crates/mars/src/strategies/rsa/: README.md  mod.rs  tests.rs
crates/mars/src/strategies/rto/: README.md  mod.rs  tests.rs
crates/mars/src/strategies/self_consistency/: README.md  mod.rs  tests.rs
crates/mars/tests/: integration_tests.rs
docs/: faq.md  index.md  integration.md
docs/api/: core.md  mars.md
docs/architecture/: core-traits.md  design-patterns.md  overview.md
docs/core/: error-handling.md  introduction.md  model-client.md  optimizer-trait.md  types.md
docs/development/: building.md  contributing.md  creating-optimizers.md  testing.md
docs/mars/: aggregation.md  (+6 more)
examples/: autothink_example.rs  cot_decoding_example.rs  deep_thinking_example.rs  entropy_decoding_example.rs  r_star_example.rs
mars/: Cargo.toml
scratch_pads/: CODING_LLM_BENCHMARKS.md  COMPREHENSIVE_STRATEGY_BENCHMARK_RESULTS.md  UNIMPLEMENTED_TECHNIQUES.md
scripts/: update_readme_structure.py
(+22 files in other folders)
