[workspace]
members = [
    "crates/core",
    "crates/mars",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
futures = { version = "0.3" }
async-trait = { version = "0.1" }
async-stream = { version = "0.3" }
tracing = { version = "0.1" }
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8" }

