[package]
name = "optillm-core"
version.workspace = true
edition.workspace = true
description = "Core types, traits, and interfaces for optillm implementations"
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
